src/test/ui/macros/macro-use-wrong-name.stderr
error: cannot find macro `macro_two` in this scope
  --> $DIR/macro-use-wrong-name.rs:7:5
   |
LL |     macro_two!();
   |     ^^^^^^^^^ help: a macro with a similar name exists: `macro_one`
   | 
  ::: $DIR/auxiliary/two_macros.rs:2:1
   |
LL | macro_rules! macro_one { () => ("one") }
   | ---------------------- similarly named macro `macro_one` defined here
   |
   = note: consider importing this macro:
           two_macros::macro_two

error: aborting due to previous error

